tests/neg/context-function-syntax.scala
val test =
  (using x: Int) => x  // error // error
